Fix calendar spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -113,6 +113,10 @@ td.actions a {
   }
 }
 
+footer .date {
+  margin-left: 1em;
+}
+
 @import 'application/*';
 
 @import 'articles';
